[gd_scene load_steps=12 format=3 uid="uid://4fdox280kq8y"]

[ext_resource type="Script" uid="uid://ibqu2m4oiivq" path="res://Scenes/seleccion_personaje.gd" id="1_15d51"]
[ext_resource type="FontFile" uid="uid://bvccc7epi7xmu" path="res://Font/PixeloidSans.otf" id="1_j8hod"]
[ext_resource type="Script" uid="uid://bsvre67nx3qh1" path="res://Scenes/node_2d_carrusel.gd" id="2_ghb5r"]
[ext_resource type="Script" uid="uid://xf73y2wfoklk" path="res://Scenes/carousel_container.gd" id="3_ot7s7"]
[ext_resource type="Texture2D" uid="uid://cd0dx33eqspdp" path="res://Assets/Carrusel/gato.png" id="4_3xds4"]
[ext_resource type="Texture2D" uid="uid://mdgo822vgu6f" path="res://Assets/Carrusel/Zombie-Tileset---_0412_Capa-413.png" id="4_mu17p"]
[ext_resource type="Texture2D" uid="uid://cjpq2w3hbrag6" path="res://Assets/Carrusel/caballero.png" id="4_ot7s7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bklmu"]
bg_color = Color(0.0627451, 0.0823529, 0.0901961, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ot7s7"]
metadata/_snap_enabled = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ot7s7"]
bg_color = Color(0.188235, 0.227451, 0.243137, 1)
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3xds4"]
bg_color = Color(0.188235, 0.227451, 0.243137, 1)
draw_center = false

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_15d51")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 642.0
offset_bottom = 365.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bklmu")

[node name="TextureRect" type="TextureRect" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 321.0
offset_top = -107.5
offset_right = 426.0
offset_bottom = 534.5
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5708
texture = SubResource("GradientTexture2D_ot7s7")

[node name="TextureRect2" type="TextureRect" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -321.0
offset_top = 142.5
offset_right = -174.0
offset_bottom = 784.5
grow_horizontal = 2
grow_vertical = 2
rotation = 4.71239
texture = SubResource("GradientTexture2D_ot7s7")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PersonajesVBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -44.0
offset_right = 64.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
size_flags_horizontal = 4

[node name="Node2D" type="Node2D" parent="CanvasLayer/PersonajesVBoxContainer"]
position = Vector2(21.6667, 16.6667)
script = ExtResource("2_ghb5r")

[node name="CarouselContainer" type="Node2D" parent="CanvasLayer/PersonajesVBoxContainer/Node2D" node_paths=PackedStringArray("position_offset_node")]
position = Vector2(0, 1)
script = ExtResource("3_ot7s7")
follow_bitton_focus = true
position_offset_node = NodePath("Control")
metadata/_custom_type_script = "uid://xf73y2wfoklk"

[node name="Control" type="Control" parent="CanvasLayer/PersonajesVBoxContainer/Node2D/CarouselContainer"]
layout_mode = 3
anchors_preset = 0
offset_left = -12.3333
offset_top = 3.0
offset_right = 27.6667
offset_bottom = 43.0
size_flags_horizontal = 4
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="CanvasLayer/PersonajesVBoxContainer/Node2D/CarouselContainer/Control"]
layout_mode = 0
offset_left = -58.0
offset_top = -22.6667
offset_right = -18.0
offset_bottom = 17.3333

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/PersonajesVBoxContainer/Node2D/CarouselContainer/Control/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("4_mu17p")

[node name="Panel2" type="Panel" parent="CanvasLayer/PersonajesVBoxContainer/Node2D/CarouselContainer/Control"]
layout_mode = 0
offset_left = -4.00006
offset_top = -20.6667
offset_right = 35.9999
offset_bottom = 19.3333
theme_override_styles/panel = SubResource("StyleBoxFlat_ot7s7")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/PersonajesVBoxContainer/Node2D/CarouselContainer/Control/Panel2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("4_3xds4")

[node name="Panel3" type="Panel" parent="CanvasLayer/PersonajesVBoxContainer/Node2D/CarouselContainer/Control"]
layout_mode = 0
offset_left = 52.0
offset_top = -22.3333
offset_right = 92.0
offset_bottom = 17.6667
theme_override_styles/panel = SubResource("StyleBoxFlat_3xds4")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/PersonajesVBoxContainer/Node2D/CarouselContainer/Control/Panel3"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("4_ot7s7")

[node name="SeleccionarBoxContainer" type="BoxContainer" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -109.0
offset_top = 28.0
offset_right = 109.0
offset_bottom = 76.0
grow_horizontal = 2

[node name="Label" type="Label" parent="CanvasLayer/SeleccionarBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_j8hod")
theme_override_font_sizes/font_size = 20
text = "Selecciona un personaje"

[node name="DificultadBoxContainer" type="BoxContainer" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -109.0
offset_top = -48.0
offset_right = 109.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="CanvasLayer/DificultadBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_j8hod")
theme_override_font_sizes/font_size = 20
text = "Dificultad: "

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/DificultadBoxContainer"]
layout_mode = 2

[node name="IzquierdaButton" type="Button" parent="CanvasLayer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 54.0
offset_top = -13.0
offset_right = 72.0
offset_bottom = 18.0
grow_vertical = 2
text = "<"

[node name="DerechaButton" type="Button" parent="CanvasLayer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 588.0
offset_top = -16.0
offset_right = 606.0
offset_bottom = 15.0
grow_vertical = 2
text = ">"

[node name="Button3" type="Button" parent="CanvasLayer"]
offset_left = 26.0
offset_top = 36.0
offset_right = 41.0
offset_bottom = 64.0
theme_override_fonts/font = ExtResource("1_j8hod")
text = "<"

[connection signal="pressed" from="CanvasLayer/IzquierdaButton" to="CanvasLayer/PersonajesVBoxContainer/Node2D" method="_on_izquierda_button_pressed"]
[connection signal="pressed" from="CanvasLayer/DerechaButton" to="CanvasLayer/PersonajesVBoxContainer/Node2D" method="_on_derecha_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Button3" to="." method="_on_button_regresar_pressed"]
